# business-tasks

./: .env  Cargo.toml  README.md
migrations/: 001_initial.sql
src/: main.rs
src/api/: mod.rs  tasks.rs  users.rs
src/db/: mod.rs  sqlite.rs
src/models/: mod.rs  tag.rs  task.rs  user.rs
static/css/: main.css
static/js/: app.js
templates/: base.html  index.html  users.html
