[package]
name = "business-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
thiserror = "1.0"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
